[project]
name = "laro"
dependencies = [
    "click",
    "moderngl",
    "pygame-ce"
]
authors = [
    {name = "Keon Echevarria", email="keon.echevarria@gmail.com"},
]
description = "A library that extends pygame's functionality."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = [
    "pygame",
    "Game development,"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",    # Change when stable release is present.
  "Programming Language :: Python",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Cython",
  "Programming Language :: Python :: 3.14",
  "Topic :: Games/Entertainment"
]
dynamic = [
    "version",
]

[project.scripts]
# Enter a cli here.
laro = "laro.cli:cli"

[project.urls]
Repository = "https://github.com/MrOakNextDoor/laro"

[project.optional-dependencies]
dev = ["Cython>=3.0.0", "build", "setuptools"]

[build-system]
requires = ["setuptools", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"
